Additional setup loosely based on https://auth0.com/blog/node-js-and-typescript-tutorial-build-a-crud-api/

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
-    "target": "es2016"
+    "target": "es2016",
+    "useUnknownInCatchVariables": false
   },
   "exclude": [
     "src/**/*.test.ts"
